# project-llm-chat

./: .gitignore  NOTES.md  README.md  gpu_test.py  notes.md  notes.txt  pyproject.toml  run_10_midtrain.py  run_11_sft.py  run_12_rlhf.py  run_13_code.py  run_1_base.py  run_2_opt.py  run_3_1_test.py  run_3_memory.py  run_3_memory_1.py  run_3_multi.py  run_4_memory_2.py  run_4_test.py  run_5_baseline.py  run_6_baseline_2.py  run_6_pytorch.py  run_6_random.py  run_6_test.py  run_6_test_README.md  run_7_opt.py  run_8_CORE.py  run_8h100.sh  run_9_tokens.py  run_gpu_test.sh  run_pytorch.sh  run_test.py  startup-conda.sh  startup.sh  test_lightning_progressive.py  test_lightning_progressive_README.md  test_loss_gpu.py  test_nccl_minimal.py  test_nccl_minimal_README.md
core/: chat.py  dataloader.py  dataset.py  memory_tracker.py  models.py  optimizer.py  reward.py  utils.py  validation.py
notebooks/: code_datasets.py  core_eval_explore.ipynb  data_inspect.ipynb  dataset_test.ipynb  demo.ipynb  dpo_data_inspect.ipynb  edas.ipynb  edas_1_eval.ipynb  edas_2_memory.ipynb  gpt2_completions.ipynb  midtrain_data_explore.ipynb  packing_demo.ipynb  run_1.ipynb  test_completions.ipynb  tokenizer_inspect.ipynb
