[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-llm-chat"
version = "0.1.0"
description = "LLM chat training project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.57.0",
    "pandas>=2.3.3",
    "pytorch-lightning>=2.6.0",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.0",
    "matplotlib>=3.10.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
